feat: add pwn scrapper